aux_source_directory(. SRC_LIST)
# add_compile_options(-std=c99 -Wall)

foreach (file ${SRC_LIST})
  get_filename_component(exe ${file} NAME_WLE)
  add_executable(${exe} ${file})
  if (${exe} STREQUAL "byteorder")
  else()
    target_link_libraries(${exe} unp)
  endif()
  if (BUILDSTATIC)
    add_executable(${exe}_static ${file})
    target_link_libraries(${exe}_static libunp_static)
  endif()
endforeach(file)
